fix: signup alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -199,3 +199,11 @@ body {
   margin-right: 30%;
   margin-left: 30%;
 }
+.signup-card {
+  position: absolute;
+  inset: 0;
+  text-align: center;
+  margin-top: 10%;
+  margin-right: 30%;
+  margin-left: 30%;
+}
